<resources>
    <string name="app_name">Practice Arithmetic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="blank_text_view">blank</string>
    <string name="difficulty_text_view">Select Difficulty:</string>
    <string name="operation_text_view">Select Operation:</string>
    <string name="num_questions_text_view">Number of Questions</string>
    <string name="less_questions_button_str">-</string>
    <string name="more_questions_button_str">+</string>
    <string name="start_button_str">START</string>
    <string name="done_button_str">DONE</string>
    <string name="your_ans_hint">Your answer...</string>
    <string name="what_is">What is...</string>
    <string name="do_it_again_str">Do It Again</string>
    <string name="easy_radio_str">Easy</string>
    <string name="medium_radio_str">Medium</string>
    <string name="hard_radio_str">Hard</string>
    <string name="addition_radio_str">Addition</string>
    <string name="subtraction_radio_str">Subtraction</string>
    <string name="multiplication_radio_str">Multiplication</string>
    <string name="division_radio_str">Division</string>
</resources>