<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/hated_math_1200x627" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <!--            android:layout_alignParentTop="@android:id/imageView"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/difficulty_text_view"
                        android:textColor="@color/gray"
                        android:textSize="20dp" />

                    <RadioGroup
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_easy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/easy_radio_str" />

                        <RadioButton
                            android:id="@+id/radio_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium_radio_str" />

                        <RadioButton
                            android:id="@+id/radio_hard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hard_radio_str" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/operation_text_view"
                        android:textColor="@color/gray"
                        android:textSize="20dp" />

                    <RadioGroup
                        android:id="@+id/radio_group_difficulty"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addition_radio_str" />

                        <RadioButton
                            android:id="@+id/radio_subtract"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/subtraction_radio_str" />

                        <RadioButton
                            android:id="@+id/radio_multiply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/multiplication_radio_str" />

                        <RadioButton
                            android:id="@+id/radio_divide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/division_radio_str" />
                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/num_questions_text_view"
                    android:textSize="30dp"
                    android:textColor="@color/gray"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/less_questions_button_str"
                    android:textColor="@color/gray"
                    android:backgroundTint="@color/white"
                    android:textSize="70sp"
                    app:cornerRadius="4dp" />

                <!--TODO text is the value of the var-->
                <TextView
                    android:id="@+id/tv_num_questions"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="40dp" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/more_questions_button_str"
                    android:textSize="70sp"
                    android:textColor="@color/gray"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="4dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/gray"
                    android:enabled="true"
                    android:text="@string/start_button_str"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:cornerRadius="4dp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>