<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/what_is"
                android:textColor="@color/black"
                android:textSize="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="100dp">
<!--    TODO change to string resource of text-->

            <TextView
                android:id="@+id/tv_num1"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginRight="100dp"
                android:textColor="@color/black"
                android:textSize="50dp" />
            <TextView
                android:id="@+id/tv_operation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="50dp" />
            <TextView
                android:id="@+id/tv_num2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:textColor="@color/black"
                android:textSize="50dp" />
<!--            TODO delete-->
<!--            <TextView-->
<!--                android:id= "@+id/tv_correct"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"></TextView>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text_answer"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:inputType="text"
                android:textSize="40dp"
                android:hint="@string/your_ans_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/done_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:enabled="true"
                android:textColor="@color/black"
                android:clickable="true"
                android:text="@string/done_button_str"
                android:textSize="20sp"
                android:backgroundTint="@color/gray"
                app:cornerRadius="4dp" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/hated_math_1200x627" />
    </RelativeLayout>

</RelativeLayout>